...
                            print(snapshot.data);
                          }
                          if (snapshot.data == false) {
                            return RaisedButton(
                              color: Config.primaryColor,
                              child: Text(
                                'Add To Favorite',
                                style: TextStyle(color: Colors.white),
                              ),
                              onPressed: () {
                                insertToFavorite(data);
                                Toast.show('Added', context);
                                Navigator.of(context).pop();
                              },
                            );
                          } else {
                            return RaisedButton(
                              color: Config.primaryColor,
                              child: Text(
                                'Delete from Favorite',
                                style: TextStyle(color: Colors.white),
                              ),
                              onPressed: () {
                                deleteFromFavorite(data);
                                Toast.show('Deleted', context);
                                Navigator.of(context).pop();
...
