...
                  title: Icon(
                    Icons.warning,
                    color: Config.secondaryColor,
                    size: 100,
                  ),
                  subtitle: Text(
                    'No Data',
                    textAlign: TextAlign.center,
                    style: TextStyle(
                        fontSize: 20, color: Config.secondaryColor),
                  ),
                ),
              );
...
